<resources>
    <string name="app_name">My Modules</string>
    <string name="modules">My Modules</string>
    <string name="c346">C346 Android Programming</string>
    <string name="c349">C349 iPad Programming</string>
    <string name="c206">C206 Software Development Process</string>
    <string name="c203">C203 Web Application Development in PHP</string>
    <string name="c218">C218 UI/UX Design for Apps</string>
    <string name="c235">C235 IT Security and Management</string>
    <string name="back">Return to Previous Page</string>
</resources>